MPDX-5180 fix safari scroll jump (#1226)

--- a/src/tools/appeals/show/_show.scss
+++ b/src/tools/appeals/show/_show.scss
@@ -1,6 +1,6 @@
 appeals-show {
     display: grid;
-    height: 100%;
+    height: calc(100vh - 130px); // calc needed for safari jump bug
     overflow: hidden;
     grid-template-columns: 250px auto;
     grid-template-rows: auto;
@@ -70,7 +70,7 @@ appeals-show {
         grid-column: 2;
         .wrapper {
             display: grid;
-            height: 100%;
+            height: calc(100vh - 130px); // calc needed for safari
             grid-template-rows: auto 1fr;
         }
         .menu {
